--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     , "validator": "1.5.0"
     , "underscore": "1.4.4"
     , "i18n": "0.3.7"
+    , "mime-magic": "5.14.0"
   },
   "devDependencies": {
       "less": ">=1.3.3"
