--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     , "validator": "1.5.0"
     , "underscore": "1.4.4"
     , "i18n": "0.3.7"
-    , "smartcore": ">=0.0.1"
+    , "smartcore": "0.0.4"
   },
   "devDependencies": {
       "less": ">=1.3.3"
