--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
       "less": ">=1.3.3"
-      , "csv": ">=0.2.9"
+    , "csv": ">=0.2.9"
+    , "should": "2.0.2"
   }
 }
